{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 41,
  "lineage": "4fe953ca-8adc-7896-a4e6-d8f94226a3ad",
  "resources": [
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener/app/alb1/443852eeb60902d4/807f3c8fde3b4470",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:targetgroup/tf-20251209080746024400000009/1e254b6051ca2756",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener/app/alb1/443852eeb60902d4/807f3c8fde3b4470",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:loadbalancer/app/alb1/443852eeb60902d4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener/app/alb1/443852eeb60902d4/807f3c8fde3b4470"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.application.aws_alb_target_group.webserver",
            "module.application.aws_lb.alb1",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "api_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:targetgroup/tf-20251209080746023900000008/e6a150d1ff77017e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener-rule/app/alb1/443852eeb60902d4/807f3c8fde3b4470/fdb999dbf0fdb3b7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/languages",
                      "/languages/*",
                      "/languages/*/*",
                      "/ok"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener-rule/app/alb1/443852eeb60902d4/807f3c8fde3b4470/fdb999dbf0fdb3b7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener/app/alb1/443852eeb60902d4/807f3c8fde3b4470",
            "priority": 10,
            "region": "ap-southeast-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener-rule/app/alb1/443852eeb60902d4/807f3c8fde3b4470/fdb999dbf0fdb3b7"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.application.aws_alb_listener.front_end",
            "module.application.aws_alb_target_group.api",
            "module.application.aws_alb_target_group.webserver",
            "module.application.aws_lb.alb1",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "frontend_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:targetgroup/tf-20251209080746024400000009/1e254b6051ca2756",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener-rule/app/alb1/443852eeb60902d4/807f3c8fde3b4470/f25634600a1c506c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener-rule/app/alb1/443852eeb60902d4/807f3c8fde3b4470/f25634600a1c506c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener/app/alb1/443852eeb60902d4/807f3c8fde3b4470",
            "priority": 100,
            "region": "ap-southeast-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:listener-rule/app/alb1/443852eeb60902d4/807f3c8fde3b4470/f25634600a1c506c"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.application.aws_alb_listener.front_end",
            "module.application.aws_alb_target_group.webserver",
            "module.application.aws_lb.alb1",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:targetgroup/tf-20251209080746023900000008/e6a150d1ff77017e",
            "arn_suffix": "targetgroup/tf-20251209080746023900000008/e6a150d1ff77017e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/ok",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:targetgroup/tf-20251209080746023900000008/e6a150d1ff77017e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20251209080746023900000008",
            "name_prefix": "tf-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07283535c32223c98"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:targetgroup/tf-20251209080746023900000008/e6a150d1ff77017e"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:targetgroup/tf-20251209080746024400000009/1e254b6051ca2756",
            "arn_suffix": "targetgroup/tf-20251209080746024400000009/1e254b6051ca2756",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:targetgroup/tf-20251209080746024400000009/1e254b6051ca2756",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20251209080746024400000009",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07283535c32223c98"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:targetgroup/tf-20251209080746024400000009/1e254b6051ca2756"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:loadbalancer/app/alb1/443852eeb60902d4",
            "arn_suffix": "app/alb1/443852eeb60902d4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb1-790248790.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:loadbalancer/app/alb1/443852eeb60902d4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb1",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-006509e047f9b741e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000a5010ae8b2591c"
              },
              {
                "subnet_id": "subnet-05ad830d78e707b32"
              }
            ],
            "subnets": [
              "subnet-000a5010ae8b2591c",
              "subnet-05ad830d78e707b32"
            ],
            "tags": {
              "Environment": "Prod"
            },
            "tags_all": {
              "Environment": "Prod"
            },
            "vpc_id": "vpc-07283535c32223c98",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596757758746:loadbalancer/app/alb1/443852eeb60902d4"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa377108253bf620",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:instance/i-082b839a7c2bede6a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082b839a7c2bede6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "duongcon-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05242f97753ce6066"
              }
            ],
            "primary_network_interface_id": "eni-05242f97753ce6066",
            "private_dns": "ip-10-10-1-194.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.194",
            "public_dns": "ec2-13-212-213-34.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.213.34",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:596757758746:key/3a645902-365e-4a58-8df7-f23a219c3d50",
                "throughput": 0,
                "volume_id": "vol-0fe4819f4b48855c3",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ad830d78e707b32",
            "tags": {
              "Name": "Bastion",
              "Owner": "DuongCon"
            },
            "tags_all": {
              "Name": "Bastion",
              "Owner": "DuongCon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f78ea06a68cb919"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "i-082b839a7c2bede6a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:network-acl/acl-04cfec28d6f8b89aa",
            "default_network_acl_id": "acl-04cfec28d6f8b89aa",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04cfec28d6f8b89aa",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "subnet_ids": [
              "subnet-0334f6ecf5bd701a0",
              "subnet-0a2d03fa43f024649"
            ],
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-07c1c83db483e3771",
            "default_route_table_id": "rtb-07c1c83db483e3771",
            "id": "rtb-07c1c83db483e3771",
            "owner_id": "596757758746",
            "propagating_vgws": null,
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-02f0e028f98f18f6f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02f0e028f98f18f6f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e6019c8f0888efc",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:elastic-ip/eipalloc-02e6019c8f0888efc",
            "domain": "vpc",
            "id": "eipalloc-02e6019c8f0888efc",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-220-248-49.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.248.49",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08db171628a5254ef",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:elastic-ip/eipalloc-08db171628a5254ef",
            "domain": "vpc",
            "id": "eipalloc-08db171628a5254ef",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-0-125-23.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.125.23",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:internet-gateway/igw-0a5e2ee73e0eff217",
            "id": "igw-0a5e2ee73e0eff217",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e6019c8f0888efc",
            "association_id": "eipassoc-019c1dacb604a7ba2",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0480ea7171cf1aa25",
            "network_interface_id": "eni-0631018fa3aac36de",
            "private_ip": "10.10.1.244",
            "public_ip": "52.220.248.49",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05ad830d78e707b32",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08db171628a5254ef",
            "association_id": "eipassoc-0208a56244c80545f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06cba829cb249e37c",
            "network_interface_id": "eni-08a86657733bc166f",
            "private_ip": "10.10.2.54",
            "public_ip": "3.0.125.23",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-000a5010ae8b2591c",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eafc685a846ec0f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0480ea7171cf1aa25",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0eafc685a846ec0f7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0eafc685a846ec0f7"
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0726caea5c5add9501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06cba829cb249e37c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0726caea5c5add950",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0726caea5c5add950"
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a5e2ee73e0eff217",
            "id": "r-rtb-01f00710f733137ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-01f00710f733137ea",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-01f00710f733137ea"
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-0eafc685a846ec0f7",
            "id": "rtb-0eafc685a846ec0f7",
            "owner_id": "596757758746",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "timeouts": null,
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "rtb-0eafc685a846ec0f7",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-0726caea5c5add950",
            "id": "rtb-0726caea5c5add950",
            "owner_id": "596757758746",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "timeouts": null,
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "rtb-0726caea5c5add950",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-01f00710f733137ea",
            "id": "rtb-01f00710f733137ea",
            "owner_id": "596757758746",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "timeouts": null,
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "rtb-01f00710f733137ea",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6932f087579601c",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0eafc685a846ec0f7",
            "subnet_id": "subnet-0a2d03fa43f024649"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f7a3f4b0a8110f",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0726caea5c5add950",
            "subnet_id": "subnet-0334f6ecf5bd701a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09061da2227568525",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-01f00710f733137ea",
            "subnet_id": "subnet-05ad830d78e707b32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871aa936eac133b8",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-01f00710f733137ea",
            "subnet_id": "subnet-000a5010ae8b2591c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-0a2d03fa43f024649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2d03fa43f024649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-0a2d03fa43f024649",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-0334f6ecf5bd701a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0334f6ecf5bd701a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-0334f6ecf5bd701a0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-05ad830d78e707b32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ad830d78e707b32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-05ad830d78e707b32",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-000a5010ae8b2591c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000a5010ae8b2591c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "vpc_id": "vpc-07283535c32223c98"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-000a5010ae8b2591c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:vpc/vpc-07283535c32223c98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04cfec28d6f8b89aa",
            "default_route_table_id": "rtb-07c1c83db483e3771",
            "default_security_group_id": "sg-02f0e028f98f18f6f",
            "dhcp_options_id": "dopt-03e77db624ee03b31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07283535c32223c98",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c1c83db483e3771",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "tags": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "DuongCon"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "vpc-07283535c32223c98",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-006509e047f9b741e",
            "description": "alb network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006509e047f9b741e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "sg-006509e047f9b741e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-09b187212d1ae3a01",
            "description": "application network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b187212d1ae3a01",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "22 from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f78ea06a68cb919"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "80 from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006509e047f9b741e"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "80 from bastion",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f78ea06a68cb919"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "8080 from alb",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006509e047f9b741e"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 from bastion",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f78ea06a68cb919"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "application",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application allow traffic"
            },
            "tags_all": {
              "Name": "application allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "sg-09b187212d1ae3a01",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-00f78ea06a68cb919",
            "description": "bastion network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f78ea06a68cb919",
            "ingress": [
              {
                "cidr_blocks": [
                  "123.20.239.118/32"
                ],
                "description": "22 from workstation",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "sg-00f78ea06a68cb919",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-0df0d8db2cd3ee7e6",
            "description": "mongodb network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df0d8db2cd3ee7e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "22 from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f78ea06a68cb919"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "27017 from application",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b187212d1ae3a01"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongodb",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database allow traffic"
            },
            "tags_all": {
              "Name": "database allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07283535c32223c98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "sg-0df0d8db2cd3ee7e6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa377108253bf620",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:instance/i-0c478b56b1bd8bad9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c478b56b1bd8bad9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "duongcon-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06f065c178d766e00"
              }
            ],
            "primary_network_interface_id": "eni-06f065c178d766e00",
            "private_dns": "ip-10-10-101-207.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.101.207",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:596757758746:key/3a645902-365e-4a58-8df7-f23a219c3d50",
                "throughput": 0,
                "volume_id": "vol-0a1060051bb38c21b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2d03fa43f024649",
            "tags": {
              "Name": "Mongo",
              "Owner": "DuongCon"
            },
            "tags_all": {
              "Name": "Mongo",
              "Owner": "DuongCon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df0d8db2cd3ee7e6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "i-0c478b56b1bd8bad9",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb"
          ]
        }
      ]
    }
  ]
}